# zepp-cloud-sdk

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2025-09-02-research-summary.md  agent.md  documentation-map.md  index.md  references.md
docs/research/: band_data.md  events.md
docs/usage/: band.md  events.md
src/zepp_cloud/: __init__.py  _version.py  auth.py  client.py  config.py  errors.py
src/zepp_cloud/cli/: __init__.py
src/zepp_cloud/models/: band.py  band_detail.py  blood_oxygen.py  pai.py  readiness.py  stress.py  workout.py
src/zepp_cloud/parsers/: band_decoder.py  band_detail.py  blood_oxygen.py  pai.py  readiness.py  stress.py  workout.py
src/zepp_cloud/resources/: band.py  events.py  workouts.py
src/zepp_cloud/transport/: http.py
src/zepp_cloud/utils/: base64json.py  time.py
tests/: test_band.py  test_band_detail.py  test_cli.py  test_cli_band.py  test_cli_band_detail.py  test_cli_events_blood_oxygen.py  test_cli_events_pai.py  test_cli_events_readiness.py  test_cli_events_stress.py  test_cli_workouts.py  test_events_blood_oxygen.py  test_events_pai.py  test_events_readiness.py  test_events_stress.py  test_imports.py  test_transport.py  test_workouts.py
